--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb-typescript",
-        "plugin:prettier/recommended"
+        "airbnb-typescript"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -45,6 +44,9 @@
                 "ts": "never",
                 "tsx": "never"
             }
-        ]
+        ],
+        "react/jsx-indent": "off",
+        "react/jsx-indent-props": "off",
+        "@typescript-eslint/indent": "off"
     }
 }
