--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "antd": "^4.13.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "mobx": "^6.1.8",
+    "mobx-react": "^7.1.0",
+    "mobx-react-lite": "^3.2.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
