--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "experimentalDecorators":true,
+    "experimentalDecorators": true,
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src",
+    "tests/App.test.tsx"
   ]
 }
